Css header and jumbotron

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="container">
             <header>
                 <section class="upper">
-                    <h2><img src="./img/logo.svg"></h2>
+                    <img src="./img/logo.svg" alt="Discord logo">
                     <nav>
                         <ul>
                             <li>Scarica</li>
@@ -24,15 +24,24 @@
                     </nav>
                     <button>Accedi</button>
                 </section>
-                <section class="jumbo">
+                <section class="jumbo flex jumboFlex">
                     <h1>Il tuo posto per parlare</h1>
                     <p>Che tu faccia parte di un club scolastico, gruppo di gamer, comunità
-                        artistica mondiale,<br> o semplicemente di un piccolo gruppo di
-                        amici che vuole passare il tempo assieme,<br> Discord rende
+                        artistica mondiale,
+                    </p>
+                    <p>
+                        o semplicemente di un piccolo gruppo di
+                        amici che vuole passare il tempo assieme,
+                    </p>
+                    <p>
+                        Discord rende
                         più facile chiacchierare ogni giorno e ritrovarsi più spesso.
                     </p>
-                    <button>Scarica per Mac</button>
-                    <button>Apri Discord nel tuo browser</button>
+                    <div class="jumboButtons">
+                        <button>Scarica per Mac</button>
+                        <button>Apri Discord nel tuo browser</button>
+                    </div>
+                    
                 </section>
             </header>
             <main>
