created invite section

--- a/index.html
+++ b/index.html
@@ -47,12 +47,15 @@
             <main>
                 <section class="invite flex-centered">
                     <div class=" column column-big">
-                        <h1>Immagine</h1>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium facere in quae necessitatibus quod eius recusandae eaque! Voluptatibus consequatur laboriosam voluptates perspiciatis tempore dolores, ipsam, quasi deleniti distinctio placeat dolorem?</p>
+                        <img src="./img/item1.svg" alt="">
                     </div>
                     <div class="column column-small">
-                        <h1>titolo</h1>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam commodi omnis repudiandae ipsum voluptate maxime minus ut neque reprehenderit nisi cumque, distinctio dolorum aliquam sunt animi ullam, provident aut. Optio?</p>
+                        <h1>Un Luogo a invito<br> con tutto lo<br> spazio<br>
+                        necessario per<br> parlare</h1>
+                        <p>I server Discord sono organizzati in canali</p>
+                        <p>tematici in cui puoi collaborarem condividere o</p>
+                        <p>semplicimente parlare della tua giornata</p>
+                        <p>senza intasare una chat di gruppo.</p>
                     </div>
                 </section>
                 <section class="find flex-centered">
