--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
             <main>
                 <section class="invite flex-centered">
                     <div class=" column column-big">
-                        <img src="./img/item1.svg" alt="">
+                        <img src="./img/item1.svg" alt="" class="imgMain">
                     </div>
                     <div class="column column-small">
-                        <h1>Un Luogo a invito<br> con tutto lo<br> spazio<br>
+                        <h1 class="mainH1">Un Luogo a invito<br> con tutto lo<br> spazio<br>
                         necessario per<br> parlare</h1>
                         <p>I server Discord sono organizzati in canali</p>
                         <p>tematici in cui puoi collaborarem condividere o</p>
@@ -58,32 +58,42 @@
                         <p>senza intasare una chat di gruppo.</p>
                     </div>
                 </section>
+
                 <section class="find flex-centered">
                     <div class="column column-small">
-                        <h1>titolo</h1>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam commodi omnis repudiandae ipsum voluptate maxime minus ut neque reprehenderit nisi cumque, distinctio dolorum aliquam sunt animi ullam, provident aut. Optio?</p>
+                        <h1 class="mainH1">Dove trovarsi è<br> facile</h1>
+                        <p>Metiti comodo in un canale vocale quando</p>
+                        <p>hai tempo. Gli amici nel tuo server possono</p>
+                        <p>vedere che sei lì e unirsi instantaneamente</p>
+                        <p>senza dover chiamare.</p>
                     </div>
                     <div class=" column column-big">
-                        <h1>Immagine</h1>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium facere in quae necessitatibus quod eius recusandae eaque! Voluptatibus consequatur laboriosam voluptates perspiciatis tempore dolores, ipsam, quasi deleniti distinctio placeat dolorem?</p>
+                        <img src="./img/item2.svg" alt="" class="imgMain">
                     </div>
                 </section>
                 <section class="fandom flex-centered">
                     <div class=" column column-big">
-                        <h1>Immagine</h1>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium facere in quae necessitatibus quod eius recusandae eaque! Voluptatibus consequatur laboriosam voluptates perspiciatis tempore dolores, ipsam, quasi deleniti distinctio placeat dolorem?</p>
+                        <img src="./img/item3.svg" alt="" class="imgMain">
                     </div>
                     <div class="column column-small">
-                        <h1>titolo</h1>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam commodi omnis repudiandae ipsum voluptate maxime minus ut neque reprehenderit nisi cumque, distinctio dolorum aliquam sunt animi ullam, provident aut. Optio?</p>
+                        <h1 class="mainH1">Da pochi a un<br> Fandom</h1>
+                        <p>Dai inizio a una community di qualsiasi</p>
+                        <p>dimensione con strumenti di moderazione e</p>
+                        <p>accesso ai membri personalizzabile.</p>
+                        <p>concedi ai membri poteri speciali, crea</p>
+                        <p>canail privati, e molto altro.</p>
                     </div>
                 </section>
                 <section class="contact">
-                        <h1>Titolo</h1>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde ut fuga, hic minima expedita vero quod, reiciendis dignissimos aliquid facere impedit reprehenderit laborum aliquam laudantium officiis esse asperiores labore vel.</p>
-                        <h2>Immagine</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt, illum minus deleniti beatae, vel soluta qui facilis et, placeat commodi temporibus voluptates laborum? Nostrum eveniet saepe atque nobis harum possimus!</p>
+                        <h1 class="mainH1">Tecnologia affidabile per tenersi in contatto</h1>
+                        <p>Video e audio a bassa latenza ti faranno sentire come
+                            se foste tutti nella stessa stanza. Fai ciao in video, guarda<br>
+                            gli amici giocare in streaming, o riunitevi in una sessione di 
+                            disegno con la condivisione schermo
+                        </p>
+                        <img src="./img/item4-big.svg" alt="">
                         <div class="contact adventure">
+                            <img src="./img/stars.svg">
                             <p>Pronto a iniziare la tua avventura?</p>
                             <button>Scarica per Mac</button>
                         </div>
